made main step panels collapsible, updated openphacts schema, fixed scrolling on mobile

--- a/public/stylesheets/media-extrasmall.css
+++ b/public/stylesheets/media-extrasmall.css
@@ -103,6 +103,7 @@ html, body {
 #sidebarContentWrapper {
     position: relative;
     padding: 0 20px 0 20px;
+    max-height: none !important;
 }
 
 /*
